--- a/lesson 3 - hw/css/main.css
+++ b/lesson 3 - hw/css/main.css
@@ -1,24 +1,39 @@
 body {
-	font-family: 'Open Sans', sans-serif;
-	color: #201b2d;
-	font-size: 16px;
-	padding: 0;
-	margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    color: #201b2d;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
 
-div, p, input, button, form, span, a, ul, li {
-	box-sizing: border-box;
+div,
+p,
+input,
+button,
+form,
+span,
+a,
+ul,
+li {
+    box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	margin: 0;
-	font-family: 'Ubuntu', sans-serif;
-	font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
 }
+
 h2 {
     text-align: center;
+    letter-spacing: 0.02em;
 }
 
 p {
@@ -29,75 +44,158 @@ p {
     margin: 0 auto;
     width: 1170px;
 }
+
 .header {
-    padding-top: 62px;
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#e3f6fc+0,378fd9+100 */
-    background: #4ebffe; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #4ebffe 0%, #378fd9 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg,  #4ebffe 0%,#378fd9 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg,  #4ebffe 0%,#378fd9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3f6fc', endColorstr='#378fd9',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: #4ebffe;
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #4ebffe 0%, #378fd9 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #4ebffe 0%, #378fd9 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #4ebffe 0%, #378fd9 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e3f6fc', endColorstr='#378fd9', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
     color: #fff;
+    padding-top: 62px;
+    padding-bottom: 77px;
 }
+
 .wrapper {
     display: flex;
     justify-content: space-between;
 }
+
 .offer {
-    margin-top: 140px;
+    margin-top: 130px;
     width: 575px;
 }
-.wrapper>img{
-    margin-left: -60px;
-}
-.title {
 
+.desktop {
+    transform: translateX(29px) translateY(5px);
+}
+
+.title {
+    padding-right: 0px;
     font-size: 37px;
     line-height: 49px;
+    width: 561px;
+    display: block;
+    letter-spacing: 0.02em;
 }
+
 .title span {
     font-size: 59px;
-    line-height: 73px;;
+    line-height: 1.4em;
 }
+
 .intro {
-    margin-bottom: 45px;
+    margin-top: 21px;
+    margin-bottom: 38px;
     width: 405px;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    line-height: 1.7em;
 }
+
 .btn {
-   
     background-color: #ffd429;
     color: #000;
     padding: 20px 0px;
     display: block;
     font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
     width: 222px;
     text-align: center;
     text-decoration: none;
     transition: all 0.5s ease;
+    line-height: 1em;
+    letter-spacing: 0.01em;
 }
 
 .btn:hover {
-    background-color: #ffc15d;
+    background-color: #ff9e5d;
 
-}
-
-.mail {
-    background-color: #ecf3f8;
-}
-
-.footer {
-    background-color: #164d7a;
-    color: #fff;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
 }
 
 .section-title {
     font-size: 30px;
-   
 }
 
 .forward {
-    padding-top: 110px;
+    padding-top: 102px;
+    padding-bottom: 100px;
 }
+.features {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 72px;
+    
+}
+.feature {
+    background: url("../img/icons8-beach-96.png") no-repeat top center;
+    text-align: center;
+    padding-top: 94px;
+    width: 300px;
+}
+.feature-free-time {
+    background: url("../img/icons8-time-machine-96.png") no-repeat top center;
+    width: 295px;
+}
+
+.feature-value {
+    background: url("../img/icons8-launch-96.png") no-repeat top center;
+    width: 305px;
+}
+
+.feature-title {
+    font-size: 19px;
+}
+.feature-text {
+    margin: 10px 0px 15px 0px;
+}
+
+.mail {
+    background-color: #ecf3f8;
+    padding: 100px 0 102px 0;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 55px;
+}
+
+input {
+    display: block;
+    width: 343px;
+    margin-bottom: 15px; 
+    height: 48px;
+    border: 1px solid #bbb;
+    border-radius: 3px;
+    font-family: 'Ubuntu', sans-serif;;
+    padding: 0 25px;
+    font-size: 15px;
+}
+
+.submit {
+    width: 343px;
+    border: none;
+    cursor: pointer;
+}
+.footer {
+    background-color: #164d7a;
+    color: #fff; 
+    padding: 43px 0 47px 0;
+}
+.credits {
+
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+
+}
+
+
